--- a/page-2.html
+++ b/page-2.html
@@ -56,7 +56,7 @@
 <!--  -->
 <section class="masthead">
     <div class="container">
-        <h1 class="masthead-heading">Now A Geetanjali Enclave Franchise in New Delhi with 100% Guaranteed Success</h1>
+        <h1 class="masthead-heading">Geetanjali Enclave Franchise in New Delhi with 100% Guaranteed Success</h1>
         <!-- <div class="masthead-subheading review-info">
           <ul class="list-group list-group-flush list-group-horizontal justify-content-center">
             <li class="list-inline-item">4.6</li>
@@ -65,11 +65,83 @@
              <li class="list-inline-item">116 Reviews</li>
           </ul>
         </div> -->
-        <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">View Fees</a>
+        <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
         <p class="mt-3">Investment starts from Rs 40 Lakhs*</p>
     </div>
 </section>
-
+<!--  -->
+<section class="py-4 text-center">
+  <div class="container">
+      <h2 class="fw-semibold fs-5 mb-4 text-center">Why Choose Footprints Franchise</h2>
+     <div class="row row-cols-2 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/earning.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">40% Annual Return</h3>
+            <p>Earn as much as 20 Lacs per year in Profit</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/salary.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">No Royalty Till 40 Children</h3>
+            <p>Pay Royalty only when you are profitable</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/bag.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">120 Admissions Guaranteed</h3>
+            <p>In 2 Years or else get compensation</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/money-back-guarantee.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">Option to Sell Back</h3>
+            <p>Sell the centre back at 4 times profit</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/customer-service.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">100% Success Rate</h3>
+            <p>Zero Closed-Down centres till date</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/trust.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-semibold">Partnership Model</h3>
+            <p>Marketing, Technology, Hiring support with a complete handholding</p>
+          </div>
+        </div>
+      </div>
+     </div>
+  </div>
+</section>
+<!--  -->
+<!--  -->
+<section class="py-2 cta-block">
+  <div class="container">
+        <div class="d-flex gap-2 justify-content-center">
+          <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
+        </div>
+        <p class="mt-3 text-center">Investment starts from Rs 40 Lakhs*</p>
+  </div>
+</section>
+<!--  -->
 <!--  -->
 <section class="py-4 text-center">
     <div class="container">
@@ -116,79 +188,7 @@
         </div>
     </div>
 </section>
-<!--  -->
-<section class="py-2 cta-block">
-    <div class="container">
-          <div class="d-flex gap-2 justify-content-center">
-            <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">View Fees</a>
-          </div>
-          <p class="mt-3 text-center">Investment starts from Rs 40 Lakhs*</p>
-    </div>
-</section>
-<!--  -->
 
-<section class="py-4 text-center">
-    <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Why Choose Footprints Franchise</h2>
-       <div class="row row-cols-2 row-cols-md-3 g-3">
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/earning.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">40% Annual Return</h3>
-              <p>Earn as much as 20 Lacs per year in Profit</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/salary.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">No Royalty Till 40 Children</h3>
-              <p>Pay Royalty only when you are profitable</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/bag.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">120 Admissions Guaranteed</h3>
-              <p>In 2 Years or else get compensation</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/money-back-guarantee.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Option to Sell Back</h3>
-              <p>Sell the centre back at 4 times profit</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/customer-service.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">100% Success Rate</h3>
-              <p>Zero Closed-Down centres till date</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/trust.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Partnership Model</h3>
-              <p>Marketing, Technology, Hiring support with a complete handholding</p>
-            </div>
-          </div>
-        </div>
-       </div>
-    </div>
-</section>
-<!--  -->
 
 <section class="py-4">
     <div class="container">
@@ -203,6 +203,55 @@
           </div>
         </div>
     </div>
+</section>
+<!--  -->
+
+<section class="py-4 text-center">
+  <div class="container">
+      <h3 class="fw-semibold fs-5 mb-4 text-center">Awards</h3>
+     <div class="row row-cols-2 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-bold">2023</h3>
+            <p class="mb-2 h6">Leading Preschool in India</p>
+            <p>by BW Education</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-bold">2018</h3>
+            <p class="mb-2 h6">Best Preschool</p>
+            <p>by Silicon India</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-bold">2023</h3>
+            <p class="mb-2 h6">Innovation for Curriculum</p>
+            <p>for Preschool by BW Education</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
+          <div class="card-body">
+            <h3 class="card-title fs-6 fw-bold">2017</h3>
+            <p class="mb-2 h6">Best Preschool by Brainfeed</p>
+            <p>School Excellence Awards</p>
+          </div>
+        </div>
+      </div>
+     </div>
+  </div>
 </section>
 <!--  -->
 
@@ -327,7 +376,7 @@
 <!--  -->
 <section class="footer mt-auto fixed-bottom">
         <div class="d-flex">
-            <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">View Fees</a>
+            <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">Enquire Now</a>
             <a href="#" class="btn btn-secondary py-3 flex-fill text-white fw-semibold rounded-0">Apply Now</a>
         </div>
   </section>
