--- a/page-1.html
+++ b/page-1.html
@@ -271,50 +271,50 @@
                   <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
                       <div class="item">
                           <div class="container">
-                              <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                           <div class="container">
-                              <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                       </div>
                       <div class="item">
                           <div class="container">
-                              <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                           <div class="container">
-                              <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                       </div>
                       <div class="item">
                         <div class="container">
-                            <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                         <div class="container">
-                            <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                     </div>
                     <div class="item">
                         <div class="container">
-                            <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                         <div class="container">
-                            <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                     </div>
                     <div class="item">
                       <div class="container">
-                          <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid"/>
                       </div>
                       <div class="container">
-                          <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                   </div>
                   <div class="item">
                       <div class="container">
-                          <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid"/>
                       </div>
                       <div class="container">
-                          <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                   </div>
                   </div>
