--- a/page-2.html
+++ b/page-2.html
@@ -205,7 +205,33 @@
     </div>
 </section>
 <!--  -->
+<section class="pt-3 pb-0 py-lg-4 media">
+  <div class="container">
+      <div class="row mb-3">
+          <div class="col-md-12 text-center mx-auto">
+              <h2>Media <span class="text-info">Coverage</span></h2>
+          </div>
+      </div>
+      <div class="row justify-content-center my-4">
+          <div class="col-12">
+              <div class="tiny-slider arrow-round">
+                  <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="30" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-sm="3" data-items-xs="3">
+                      <div class="item"><img src="assets/media/TED.png" alt="TED" class="img-fluid" /></div>
+                      <div class="item"><img src="assets/media/Forbes.png" alt="Forbes" class="img-fluid" /></div>
+                      <div class="item"><img src="assets/media/BW-logopng.png" alt="BW-logopng" class="img-fluid" /></div>
+                      <div class="item"><img src="assets/media/India-Today.png" alt="India-Today"  class="img-fluid"/></div>
+                      <div class="item"><img src="assets/media/Indian-Express.png" alt="Indian-Express" class="img-fluid" /></div>
+                      <div class="item"><img src="assets/media/Time-of-india.png" alt="Time-of-india" class="img-fluid" /></div>
+                      <div class="item"><img src="assets/media/Pioneer-logo.jpg" alt="Pioneer-logo"  class="img-fluid"/></div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 
+
+<!--  -->
 <section class="py-4 text-center">
   <div class="container">
       <h3 class="fw-semibold fs-5 mb-4 text-center">Awards</h3>
@@ -320,50 +346,50 @@
                   <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
                       <div class="item">
                           <div class="container">
-                              <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                           <div class="container">
-                              <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                       </div>
                       <div class="item">
                           <div class="container">
-                              <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                           <div class="container">
-                              <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                              <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                           </div>
                       </div>
                       <div class="item">
                         <div class="container">
-                            <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                         <div class="container">
-                            <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px"  class="img-fluid"/>
                         </div>
                     </div>
                     <div class="item">
                         <div class="container">
-                            <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                         <div class="container">
-                            <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                            <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                     </div>
                     <div class="item">
                       <div class="container">
-                          <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                       <div class="container">
-                          <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                   </div>
                   <div class="item">
                       <div class="container">
-                          <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                       <div class="container">
-                          <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" />
+                          <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                   </div>
                   </div>
